修复字体问题

--- a/AutoTranslator/BepInEx/config/AutoTranslatorConfig.ini
+++ b/AutoTranslator/BepInEx/config/AutoTranslatorConfig.ini
@@ -34,8 +34,8 @@ EnableBatching=True
 UseStaticTranslations=True
 OverrideFont=
 OverrideFontSize=
-OverrideFontTextMeshPro=arialuni_sdf_u2018
-FallbackFontTextMeshPro=arialuni_sdf_u2019
+OverrideFontTextMeshPro=ch2
+FallbackFontTextMeshPro=ch2
 ResizeUILineSpacingScale=
 ForceUIResizing=False
 IgnoreTextStartingWith=\u180e;
@@ -105,7 +105,7 @@ EnableConsole=False
 
 [Migrations]
 Enable=True
-Tag=5.3.0
+Tag=5.4.3
 
 [Baidu]
 BaiduAppId=
@@ -117,6 +117,8 @@ OcpApimSubscriptionKey=
 
 [Custom]
 Url=
+EnableShortDelay=False
+DisableSpamChecks=False
 
 [DeepL]
 ExecutableLocation=
