更新API到6.2.0.0并修复部分问题

--- a/BBDevAPI/BepInEx/config/mtm101.rulerp.bbplus.baldidevapi.cfg
+++ b/BBDevAPI/BepInEx/config/mtm101.rulerp.bbplus.baldidevapi.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Baldi's Basics Plus Dev API v6.1.0.0
+## Settings file was created by plugin Baldi's Basics Plus Dev API v6.2.0.0
 ## Plugin GUID: mtm101.rulerp.bbplus.baldidevapi
 
 [General]
@@ -16,7 +16,7 @@ Visible Exceptions = false
 ## If true, the mod will attempt to connect to Gamebanana to get the latest version of the API.
 # Setting type: Boolean
 # Default value: true
-Connect to Gamebanana = true
+Connect to Gamebanana = false
 
 [Generator]
 
