--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -58,6 +58,8 @@ jobs:
     - name: 保存上传链接
       if: ${{inputs.create_pre_release == 'true' || inputs.create_pre_release == true}}
       run: echo "UPLOAD_URL=${{steps.create_pre_release.outputs.upload_url}}" >> $GITHUB_OUTPUT
+    - name: 调试输出
+      run: echo "UPLOAD_URL=${{ steps.create_pre_release.outputs.upload_url }}, PASSWORD=${{ steps.sets.outputs.passwd }}"
   build:
     needs: create
     strategy:
@@ -70,6 +72,8 @@ jobs:
       UPLOAD_URL: ${{ needs.create.outputs.UPLOAD_URL }}
       PASSWORD: ${{needs.create.outputs.passwd}}
     steps:
+    - name: 调试输出
+      run: echo "UPLOAD_URL=${{ needs.create.outputs.UPLOAD_URL }}, PASSWORD=${{ needs.create.outputs.passwd }}"
     - name: 获取最新版
       uses: actions/checkout@v4
     - name: 安装 7-zip 和 git
