--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -189,6 +189,8 @@ jobs:
       run: |
         rm bbp-chinese/DEBIAN/preinst2
         chmod 775 bbp-chinese/DEBIAN/preinst
+        chmod 775 bbp-chinese/DEBIAN/postinst
+        chmod 775 bbp-chinese/DEBIAN/prerm
         sed -i 's/{APASSWORDHERE}/'"${{env.PASSWORD}}"'/g' bbp-chinese/DEBIAN/preinst
         ver=$(cat ver.txt)
         sed -i 's/ver_replace_001/'"$ver"'/g' bbp-chinese/DEBIAN/control
