--- a/BBPC.cfg
+++ b/BBPC.cfg
@@ -15,10 +15,17 @@ is_beta = false
 # Default value: false
 is_alpha = false
 
+[Debugging]
+
+## Disable Credits 'Press any key will go back' Function
+# Setting type: Boolean
+# Default value: false
+disable_credits = false
+
 [Version Number]
 
 ## Version number that displays in game.
 # Setting type: String
 # Default value: Dev Build
-version = 1.11
+version = ver_replace_001
 
