--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -20,6 +20,9 @@ on:
 jobs:
   create:
     name: 创建预发行版
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-24.04
     container: debian:sid
     outputs:
@@ -72,6 +75,9 @@ jobs:
       matrix:
         arch: [86, 64]
     name: 构建Windows版并上传
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-24.04
     container: debian:sid
     env:
