--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -13,8 +13,7 @@ jobs:
   create:
     name: 创建发行版
     permissions:
-      contents: read
-      pull-requests: write
+      contents: write
     runs-on: ubuntu-24.04
     container: debian:sid
     outputs:
@@ -61,8 +60,7 @@ jobs:
         arch: [86, 64]
     name: 构建Windows版并上传
     permissions:
-      contents: read
-      pull-requests: write
+      contents: write
     runs-on: ubuntu-24.04
     container: debian:sid
     env:
